--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,51 +7,73 @@
     <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
         tools:context=".SignInActivity">
 
 
-        <ImageView
-            android:id="@+id/icon_main"
+        <EditText
+            android:id="@+id/et_message"
             android:layout_width="wrap_content"
-            android:layout_height="100dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+
+            android:ems="20"
+            android:inputType="textShortMessage"
+
+            android:hint="@string/et_message_board"
+            android:textAlignment="center" />
+
+        <Button
+            android:id="@+id/b_send_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            app:srcCompat="@drawable/firebase_16_logo" />
 
-
+            android:layout_below="@+id/et_message"
+            android:text="@string/button_send_to_the_board" />
 
         <TextView
             android:id="@+id/tv1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/icon_main"
+            android:layout_below="@+id/b_send_message"
+            android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
             android:text="@string/tv1"
             android:textColor="@color/colorAccent"
-android:layout_centerHorizontal="true"
-            android:textSize="@dimen/resend_verifcation"
-            />
+            android:textSize="@dimen/resend_verifcation" />
 
         <TextView
             android:id="@+id/tv2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv1"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginEnd="10dp"
             android:layout_centerHorizontal="true"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
             android:text="@string/tv2"
             android:textColor="@color/colorAccent"
             android:textSize="@dimen/forgot_password" />
 
-
+        <TextView
+            android:id="@+id/tv_board"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv2"
+            android:layout_centerHorizontal="true"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:maxLines="15"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="@dimen/forgot_password" />
 
 
     </RelativeLayout>
