--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,14 +85,22 @@
             android:text="@string/button_send_to_cloud" />
 
         <ImageView
+            android:layout_centerHorizontal="true"
             android:id="@+id/ivCloudImage"
             android:layout_width="wrap_content"
             android:layout_height="100dp"
             android:layout_below="@+id/b_send_to_cloud"
 
-            android:layout_alignParentBottom="true"
             app:srcCompat="@drawable/firebase_16_logo" />
 
+        <Button
+            android:id="@+id/b_receive_from_cloud"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/ivCloudImage"
+            android:layout_centerHorizontal="true"
 
+            android:layout_alignParentBottom="true"
+            android:text="@string/button_receive_from_cloud" />
     </RelativeLayout>
 </ScrollView>
